# summarize_everything

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
requirements/: dev.txt  main.txt  telegram.txt
summarizer/: __init__.py  __main__.py
summarizer/core/: __init__.py  core.py  extract.py  summarize.py  types.py
summarizer/integrations/: telegram.py
summarizer/integrations/telegram/: bot.py
summarizer/integrations/vercel/: requirements.txt
summarizer/integrations/vercel/api/: index.py
vercel/: README.md  requirements.txt  vercel.json
vercel/api/: index.py  tgbot.py
